Admin update page. Fixed issue with the label of each content container overlapping with adjacent labels.

--- a/src/main/webapp/css/general.css
+++ b/src/main/webapp/css/general.css
@@ -1,5 +1,9 @@
 @charset "ISO-8859-1";
 
+.color-1 {
+	background-color: #
+}
+
 .main-font {
 	
 	font-family: Verdana, Arial, sans-serif;
